<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/detail_photo"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/novel3"
            android:layout_gravity="center_horizontal"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    style="@style/TextContent.Black"
                    android:id="@+id/tv_book_name"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/books_name"
                    android:textSize="32sp" />

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:layout_marginBottom="16dp"
                    android:text="@string/deskripsi" />

                <TextView
                    style="@style/TextContent"
                    android:id="@+id/tv_deskripsi"
                    android:layout_marginBottom="16dp"
                    android:lineSpacingMultiplier="1"
                    android:text="@string/content_text"
                    android:textColor="@android:color/black" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/genre" />

                        <TextView
                            style="@style/TextSpec.Value"
                            android:id="@+id/tv_genre"
                            android:text="@string/content_genre" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/reads" />

                        <TextView
                            style="@style/TextSpec.Value"
                            android:id="@+id/tv_reads"
                            android:text="@string/content_reads" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            style="@style/TextSpec.Field"
                            android:text="@string/parts" />

                        <TextView
                            style="@style/TextSpec.Value"
                            android:id="@+id/tv_parts"
                            android:text="@string/content_parts" />
                    </TableRow>
                </TableLayout>

                <TextView
                    style="@style/TextContent.Subtitle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/author" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/author_image"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/novel4" />
                    <TextView
                        style="@style/TextContent"
                        android:id="@+id/author_name"
                        android:layout_toEndOf="@+id/author_image"
                        android:layout_toRightOf="@id/author_image"
                        android:text="@string/author_name"
                        android:textColor="@android:color/black" />
                </RelativeLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/detail"
                    android:text="@string/btn_baca" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</ScrollView>